--- a/L1-stonefly.ipynb
+++ b/L1-stonefly.ipynb
@@ -477,19 +477,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## ResNet34"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Learner setup"
    ]
@@ -497,9 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "learn = ConvLearner(data, models.resnet34, metrics=accuracy)"
@@ -507,10 +500,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Stage 1 - Training"
    ]
@@ -518,9 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -538,9 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -557,9 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -581,9 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "lr = 1e-2"
@@ -592,9 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -612,9 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -635,9 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -665,9 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#learn.recorder.plot_losses()"
@@ -676,9 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -706,9 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -730,9 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -759,9 +727,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -783,9 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -812,9 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -836,9 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "learn.save('stonefly_resnet34_stage_1')"
@@ -846,9 +806,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Stage 2"
    ]
@@ -856,9 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -876,9 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "learn.load('stonefly_resnet34_stage_1')"
@@ -887,9 +841,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -906,9 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -930,9 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "lr=1e-5"
@@ -941,9 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "learn.unfreeze()"
@@ -952,9 +898,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -974,9 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -998,9 +940,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1022,9 +962,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1046,9 +984,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "learn.save('stonefly_resnet34_stage_2')"
@@ -1097,9 +1033,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Stage 1 - Training"
    ]
@@ -1107,9 +1041,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1127,9 +1059,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1146,9 +1076,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1170,9 +1098,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "lr=1e-2"
@@ -1181,9 +1107,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1203,9 +1127,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1227,9 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1256,9 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1280,9 +1198,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1309,9 +1225,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1333,9 +1247,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "learn.save('stonefly_resnet50_stage_1')"
@@ -1343,9 +1255,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Stage 1 - Interpretation"
    ]
@@ -1353,9 +1263,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "interp = ClassificationInterpretation.from_learner(learn)"
@@ -1364,9 +1272,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1382,15 +1288,14 @@
     }
    ],
    "source": [
+    "# show images with top_losses including their prediction, actual, loss, and probability of actual class\n",
     "interp.plot_top_losses(9, figsize=(19,12))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1412,9 +1317,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1680,6 +1583,7 @@
     }
    ],
    "source": [
+    "# show images with top_losses including their prediction, actual, loss, and probability of actual class\n",
     "interp.plot_top_losses(9, figsize=(19,12))"
    ]
   },
