--- a/L1-stonefly.ipynb
+++ b/L1-stonefly.ipynb
@@ -4,18 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lesson 1 - ImageNet pretrained ResNet34 with STONEFLY9 dataset"
+    "# L1 - ImageNet pretrained ResNet34 with STONEFLY9 dataset"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook a ImageNet pretrained ResNet is trained on the STONEFLY9 dataset (http://web.engr.oregonstate.edu/~tgd/bugid/stonefly9/).<br>\n",
+    "In this notebook a ImageNet pretrained ResNet is trained on the [STONEFLY9 dataset](http://web.engr.oregonstate.edu/~tgd/bugid/stonefly9/).<br>\n",
     "\n",
     "**Accuracy results:**<br>\n",
     "ResNet34: 0.995037<br>\n",
-    "ResNet50: 0.998677"
+    "ResNet50: 0.998677<br>\n",
+    "(Literature benchmark: 0.964, see dataset link)"
    ]
   },
   {
