--- a/L1-stonefly.ipynb
+++ b/L1-stonefly.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# L1 - ImageNet pretrained ResNet34 with STONEFLY9 dataset"
+    "# L1 - ImageNet pretrained ResNets with STONEFLY9 dataset"
    ]
   },
   {
@@ -16,7 +16,7 @@
     "**Accuracy results:**<br>\n",
     "ResNet34: 0.995037<br>\n",
     "ResNet50: 0.998677<br>\n",
-    "(Literature benchmark: 0.964, see dataset link)"
+    "([Literature benchmark](http://web.engr.oregonstate.edu/~tgd/publications/jnabs-2010-automated.pdf): 0.964)"
    ]
   },
   {
