update to new API

--- a/L1-stonefly.ipynb
+++ b/L1-stonefly.ipynb
@@ -496,7 +496,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn = ConvLearner(data, models.resnet34, metrics=accuracy)"
+    "learn = Learner.create_cnn(data, models.resnet34, metrics=accuracy)"
    ]
   },
   {
@@ -1029,7 +1029,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn = ConvLearner(data, models.resnet50, metrics=accuracy)"
+    "learn = Learner.create_cnn(data, models.resnet50, metrics=accuracy)"
    ]
   },
   {
