--- a/L1-stonefly_activations.ipynb
+++ b/L1-stonefly_activations.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# L1 - ImageNet pretrained ResNets with STONEFLY9 dataset<br><br>Hooks (work in progress)"
+    "# L1 - ImageNet pretrained ResNets with STONEFLY9 dataset<br><br>Activations with hooks (work in progress)"
    ]
   },
   {
