--- a/L1-stonefly_activations.ipynb
+++ b/L1-stonefly_activations.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook a ImageNet pretrained ResNet trained on the [STONEFLY9 dataset](http://web.engr.oregonstate.edu/~tgd/bugid/stonefly9/) is used to get the activations of the network layers.<br>\n",
+    "In this notebook a ResNet34 trained on the [STONEFLY9 dataset](http://web.engr.oregonstate.edu/~tgd/bugid/stonefly9/) is used to visualize the activations of the network layers.<br>\n",
     "The base notebook can be found here: https://github.com/MicPie/fastai_course_v3/blob/master/L1-stonefly.ipynb<br>\n",
     "(Inspired by: https://github.com/kheyer/ML-DL-Projects/blob/master/Pets%20TSNE/pets_tsne.ipynb)"
    ]
@@ -768,7 +768,7 @@
     }
    ],
    "source": [
-    "# 75. layer = 3. flattened layer = final layer for classification for 9 classes\n",
+    "# 75. layer = 4. flattened layer = final layer for classification of 9 classes\n",
     "p = 6 # number of plots\n",
     "cmap='gist_heat' # color map\n",
     "fig, axes = plt.subplots(1,p, figsize=(6,2))\n",
