update of single img predicition API

--- a/L1-stonefly_single-img-pred.ipynb
+++ b/L1-stonefly_single-img-pred.ipynb
@@ -474,7 +474,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### D - New setup model without learner"
+    "### D - New setup model without full databunch"
    ]
   },
   {
@@ -949,7 +949,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### D - New setup model without learner"
+    "### D - New setup model without full databunch"
    ]
   },
   {
