--- a/TBLogger_v2.ipynb
+++ b/TBLogger_v2.ipynb
@@ -322,7 +322,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tensorboard --logdir=./logs"
+    "# To start Tensorboard run the following command in the directoy of the log file folder:\n",
+    "# tensorboard --logdir=./logs\n",
+    "# Then open localhost:6006 if you are on your local machine"
    ]
   }
  ],
